--- a/main.css
+++ b/main.css
@@ -88,3 +88,23 @@ article.project {
 .project img {
     max-height: 200px;
 }
+
+.project a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: #000000;
+}
+
+a:hover {
+    color: #ad8166;
+}
+
+@media (max-width: 400px) {
+    article.project {
+        flex-basis: 80%;
+        padding-left: 20%;
+        padding-right: 20%;
+    }
+}
