--- a/main.css
+++ b/main.css
@@ -77,16 +77,20 @@ section.portfolio {
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
+    flex-basis: 33%;
 }
 
 article.project {
-    flex-basis: 40%;
+    width: 33%;
     text-align: center;
     margin: 20px;
+    /*margin: 20px;*/
 }
 
 .project img {
     max-height: 200px;
+    width: 100%;
+    height: auto;
 }
 
 .project a {
@@ -101,10 +105,14 @@ a:hover {
     color: #ad8166;
 }
 
+@media (max-width: 800px) {
+    article.project {
+        width: 50%;
+    }
+}
+
 @media (max-width: 400px) {
     article.project {
-        flex-basis: 80%;
-        padding-left: 20%;
-        padding-right: 20%;
+        width: 100%;
     }
 }
